esp_OTA_SMT32/build/log/idf_py_stdout_output_11180
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\esp\esp_OTA_SMT32\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.3/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/esp/esp_OTA_SMT32/build/bootloader/bootloader.bin"
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[2/9] Building C object esp-idf/hostBootloader/CMakeFiles/__idf_hostBootloader.dir/hostBootloader.c.obj
FAILED: esp-idf/hostBootloader/CMakeFiles/__idf_hostBootloader.dir/hostBootloader.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/esp/esp_OTA_SMT32/build/config -ID:/esp/esp_OTA_SMT32/component/hostBootloader -IC:/Espressif/frameworks/esp-idf-v5.3/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_uart/include -IC:/Espressif/frameworks/esp-idf-v5.3/components/vfs/include -ID:/esp/esp_OTA_SMT32/component/bootLoaderCommand -IC:/Espressif/frameworks/esp-idf-v5.3/components/esp_timer/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -fmax-include-depth=500 -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/esp/esp_OTA_SMT32=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/hostBootloader/CMakeFiles/__idf_hostBootloader.dir/hostBootloader.c.obj -MF esp-idf\hostBootloader\CMakeFiles\__idf_hostBootloader.dir\hostBootloader.c.obj.d -o esp-idf/hostBootloader/CMakeFiles/__idf_hostBootloader.dir/hostBootloader.c.obj -c D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader.c
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader.c: In function 'initMin':
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader.c:35:5: error: 'minctx' undeclared (first use in this function); did you mean '_minctx'?
   35 |     minctx  = _minctx;
      |     ^~~~~~
      |     _minctx
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader.c:35:5: note: each undeclared identifier is reported only once for each function it appears in
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader.c: In function 'booLoader_send_data':
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader.c:61:21: error: 'minctx' undeclared (first use in this function)
   61 |     min_send_frame(&minctx,MIN_ID,(uint8_t*)data,len);
      |                     ^~~~~~
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader.c: In function 'host_bootLoader_handle':
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader.c:71:15: error: 'minctx' undeclared (first use in this function)
   71 |     min_poll(&minctx,&data,1);
      |               ^~~~~~
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader.c:71:22: warning: passing argument 2 of 'min_poll' from incompatible pointer type [-Wincompatible-pointer-types]
   71 |     min_poll(&minctx,&data,1);
      |                      ^~~~~
      |                      |
      |                      uint8_t (*)[1024] {aka unsigned char (*)[1024]}
In file included from D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader.h:5,
                 from D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader.c:1:
D:/esp/esp_OTA_SMT32/component/Min/min.h:175:56: note: expected 'const uint8_t *' {aka 'const unsigned char *'} but argument is of type 'uint8_t (*)[1024]' {aka 'unsigned char (*)[1024]'}
  175 | void min_poll(struct min_context *self, uint8_t const *buf, uint32_t buf_len);
      |                                         ~~~~~~~~~~~~~~~^~~
D:/esp/esp_OTA_SMT32/component/hostBootloader/hostBootloader.c:69:13: warning: unused variable 'len' [-Wunused-variable]
   69 |     uint8_t len = 0 ;
      |             ^~~
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/esp_OTA_SMT32.c.obj
D:/esp/esp_OTA_SMT32/main/esp_OTA_SMT32.c: In function 'app_main':
D:/esp/esp_OTA_SMT32/main/esp_OTA_SMT32.c:38:17: warning: unused variable 'data' [-Wunused-variable]
   38 |         uint8_t data[] = {0x01,0x02,0x03};
      |                 ^~~~
ninja: build stopped: subcommand failed.
